--- a/products.html
+++ b/products.html
@@ -15,6 +15,6 @@
 
     </ul>
 
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
