--- a/products.html
+++ b/products.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <title>Shop like Shoppify</title>
   </head>
   <body>
+    <h1>Shop me Now</h1>
     <ul id="products"></ul>
 
     <ul id="cart"></ul>
 
     <script type="module" src="./scripts/index.js"></script>
-</body>
+  </body>
 </html>
-
