styling mit grid, buttons zu card.html und zurück

--- a/products.html
+++ b/products.html
@@ -16,10 +16,18 @@
     <title>Shop like Shoppify</title>
   </head>
   <body>
-    <h1>Shop me Now</h1>
-    <ul id="products"></ul>
+    <div>
+      <h1 id="head" class="head">Shop me Now</h1>
+      <a href="./cart.html"
+        ><button id="warenkorb" class="warenkorb">
+          <i class="fa-solid fa-cart-shopping"></i> Warenkorb
+        </button></a
+      >
+    </div>
 
-    <ul id="cart"></ul>
+    <ul id="products" class="products"></ul>
+
+    <ul id="cart" class="cart"></ul>
 
     <script type="module" src="./scripts/index.js"></script>
   </body>
