--- a/cart.html
+++ b/cart.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Card</title>
   </head>
   <body>
     <ul id="cart"></ul>
+
+    <a href="./products.html"
+      ><button id="back" class="warenkorb">
+        <i class="fa-solid fa-shop"></i> zurück zum schop
+      </button></a
+    >
 
     <script type="module" src="./scripts/index.js"></script>
   </body>
