styling cart.html; final layout body for both pages; correct typos; add README

--- a/cart.html
+++ b/cart.html
@@ -14,14 +14,21 @@
     <link rel="stylesheet" href="style.css" />
     <title>Shopping-Cart</title>
   </head>
-  <body>
-    <ul id="cart"></ul>
-
-    <a href="./products.html"
-      ><button id="back" class="warenkorb">
-        <i class="fa-solid fa-shop"></i> zurück zum shop
-      </button></a
-    >
+  <body
+    id="cartBody
+  "
+  >
+    <div>
+      <h1>Shop me Now</h1>
+      <a href="./products.html"
+        ><button id="back" class="warenkorb">
+          <i class="fa-solid fa-shop"></i> back to the store
+        </button></a
+      >
+    </div>
+    <div id="overview">
+      <ul id="cart"></ul>
+    </div>
 
     <script type="module" src="./scripts/index.js"></script>
   </body>
