--- a/products.html
+++ b/products.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="style.css" />
     <title>Shop like Shoppify</title>
   </head>
-  <body>
+  <body id="productCart">
     <div>
       <h1 id="head" class="head">Shop me Now</h1>
       <a href="./cart.html"
-        ><button id="warenkorb" class="warenkorb">
-          <i class="fa-solid fa-cart-shopping"></i> Warenkorb
+        ><button id="shoppingCart" class="warenkorb">
+          <i class="fa-solid fa-cart-shopping"></i> shopping cart
         </button></a
       >
     </div>
