feat: change products.html on the index.html

--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,7 @@
   >
     <div>
       <h1>Shop me Now</h1>
-      <a href="./products.html"
+      <a href="./index.html"
         ><button id="back" class="warenkorb">
           <i class="fa-solid fa-shop"></i> back to the store
         </button></a
